[project]
name = "ai-cs-agent-langgraph"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.11.1",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
]
